Backend versión 1.8, roles actualizados, creado el componente 'agregar-producto'