@@ -1,33 +1,54 @@
 package com.corpomotriz.repuestos.config;
 
+// Importar el filtro JWT de su ubicación actual: com.corpomotriz.repuestos.jwt
+import com.corpomotriz.repuestos.jwt.JwtAuthenticationFilter; // <--- ¡Importante: CAMBIO AQUÍ!
+// Importar el EntryPoint que está en el mismo paquete config
+import com.corpomotriz.repuestos.config.JwtAuthEntryPoint;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity; // Habilita @PreAuthorize
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
-
-import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
     private static final String ROLE_ADMIN = "ADMINISTRADOR";
     private static final String ROLE_CLIENTE = "CLIENTE";
 
+    @Autowired
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Autowired
+    private JwtAuthEntryPoint jwtAuthEntryPoint;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors(withDefaults())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
+                .exceptionHandling(exceptions -> exceptions
+                        .authenticationEntryPoint(jwtAuthEntryPoint)
+                )
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers("/auth/login").permitAll()
@@ -35,15 +56,16 @@ public class SecurityConfig {
                         .requestMatchers(HttpMethod.GET, "/productos/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/proveedores/**").permitAll()
 
-                        .requestMatchers(HttpMethod.POST, "/productos").hasRole(ROLE_ADMIN)
-                        .requestMatchers(HttpMethod.POST, "/pagos").hasAnyRole(ROLE_CLIENTE, ROLE_ADMIN)
-                        .requestMatchers(HttpMethod.PUT, "/pagos/**").hasRole(ROLE_ADMIN)
-                        .requestMatchers(HttpMethod.GET, "/usuarios/**").hasRole(ROLE_ADMIN)
-                        .requestMatchers(HttpMethod.GET, "/perfil/**").hasRole(ROLE_ADMIN)
+                        .requestMatchers(HttpMethod.POST, "/productos").hasAuthority("ROLE_" + ROLE_ADMIN)
+                        .requestMatchers(HttpMethod.POST, "/pagos").hasAnyAuthority("ROLE_" + ROLE_CLIENTE, "ROLE_" + ROLE_ADMIN)
+                        .requestMatchers(HttpMethod.PUT, "/pagos/**").hasAuthority("ROLE_" + ROLE_ADMIN)
+                        .requestMatchers(HttpMethod.GET, "/usuarios/**").hasAuthority("ROLE_" + ROLE_ADMIN)
+                        .requestMatchers(HttpMethod.GET, "/perfil/**").hasAuthority("ROLE_" + ROLE_ADMIN)
 
                         .anyRequest().authenticated()
-                )
-                .httpBasic(withDefaults());
+                );
+
+        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -53,7 +75,7 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:4200"));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With", "remember-me"));
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -64,5 +86,10 @@ public class SecurityConfig {
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+        return authenticationConfiguration.getAuthenticationManager();
     }
 }
